0.9.2 (currently working on)
- [#3825] Fix: ###EVENT_TYPE###: ###TITLE###" are not correctly replaced in HTML confirmation mail for attendes
- [#3831] Fix: Topic list is empty if a category is selected in the flexforms
- [#3811] Feature: Filter the topic list automatically by the event types that are selected in the flexforms
- [#3817] Fix: Calling the deprecated t3lib_div::GPvar floods the deprecation log

0.9.1 (released 2010-04-09)
- [#3803] Cleanup: clean up the place model a bit
- [#3220] Feature: On the second registration page, list the user's name at the beginning of the names list if "myself" has been checked
- [#3543] Fix: Multiple registrations when double-clicking submit-button
- [#3149] Fix: Search in list module ignores the the registration titles
- [#3792] Fix: Total price not shown on registration summary page
- [#3793] Change: The "my managed events" list should take timeframeInList into account
- [#3784] Fix: $this->iEdition not defined in addAdministrativeData
- [#3802] Fix: Test failures in latest TYPO3 due to changed icon paths
- [#3766] Fix: In the events CSV file, place not formatted correctly
- [#3065] Change: Use the new getters/setters when using the configuration proxy
- [#2586] Change: Remove the conflict with date2cal once the date2cal bugs have been fixed
- [#3735] Fix: Error 102 when saving a registration record in backend
- [#3779] Fix: Typo in the Event Model: "Boad"
- [#3595] Fix: Internet Explorer shows border around radio button on registration page, patch by Thomas Biesenbach
- [#3710] Change: Use self:: for static calls within the same class
- [#3450] Change: Mention in setup.txt that the admin should not copy'n'paste the complete template into the TS template
- [#3729] Change: Provide ext_autoload for our extensions
- [#3718] Fix: CSV file displayed in the browser or saved with php suffix, original patch by Jörn Dost

0.9.0 (released 2010-03-01)